2005-05-31  Marcus R. Brown  <mrbrown@0xd6.org>

	* src/main.c (main): Make the prefix optional.
	Add fflush() after some file output for Win32 systems.

	Initial import of adresd's SHA1 hash dictionary attack source.

2005-05-31  Dan Peori <peori@oopo.net>

	Fixed various compiler warnings.
	Fixed the &buffer problem in load_dictionary().
	Updated the ChangeLog file.
	Committed the ChangeLog file.
	
2005-06-01	Adresd

	Fixed invalid values in searchtable, to remove some missed positive checks.
	Added dic and hash size values at end for viewing with timers.